update UnityFramework with arm64 support

--- a/inspektifySample/iosApp/Dependencies/UnityFramework.framework/Data/boot.config
+++ b/inspektifySample/iosApp/Dependencies/UnityFramework.framework/Data/boot.config
@@ -1,3 +1,4 @@
+gfx-threading-mode=4
 wait-for-native-debugger=0
 hdr-display-enabled=0
-build-guid=59142e111fc748358c5ccdd93f9f8275
+build-guid=8eceadc449ba4ba3a90e56f009a5db80
